fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	--inner-padding: 0.2rem;
-	--outer-margin: 0.25rem;
 	--event-font-size: 1.25rem;
 	--event-text-alignment: center;
 	--calendar-width: 1280px;
@@ -28,13 +27,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
-	margin-top: 68px;
+	margin-top: 63px;
 }
 
 .time-label {
 	position: relative;
 	display: flex;
-	height: 70px;
+	height: 72px;
 	align-items: center;
 }
 
